cmake_minimum_required(VERSION 3.12)
project(bulebule)

set(CMAKE_CXX_STANDARD 11)

add_executable(bulebule
        scripts/simulation_client.c
        src/mmlib/calibration.c
        src/mmlib/calibration.h
        src/mmlib/clock.c
        src/mmlib/clock.h
        src/mmlib/command.c
        src/mmlib/command.h
        src/mmlib/common.c
        src/mmlib/common.h
        src/mmlib/control.c
        src/mmlib/control.h
        src/mmlib/encoder.c
        src/mmlib/encoder.h
        src/mmlib/hmi.c
        src/mmlib/hmi.h
        src/mmlib/logging.c
        src/mmlib/logging.h
        src/mmlib/move.c
        src/mmlib/move.h
        src/mmlib/mpu.c
        src/mmlib/mpu.h
        src/mmlib/music.c
        src/mmlib/music.h
        src/mmlib/path.c
        src/mmlib/path.h
        src/mmlib/search.c
        src/mmlib/search.h
        src/mmlib/solve.c
        src/mmlib/solve.h
        src/mmlib/speed.c
        src/mmlib/speed.h
        src/mmlib/walls.c
        src/mmlib/walls.h
        src/opencm3/libopencm3/include/libopencm3/cm3/assert.h
        src/opencm3/libopencm3/include/libopencm3/cm3/common.h
        src/opencm3/libopencm3/include/libopencm3/cm3/cortex.h
        src/opencm3/libopencm3/include/libopencm3/cm3/doc-cm3.h
        src/opencm3/libopencm3/include/libopencm3/cm3/dwt.h
        src/opencm3/libopencm3/include/libopencm3/cm3/fpb.h
        src/opencm3/libopencm3/include/libopencm3/cm3/itm.h
        src/opencm3/libopencm3/include/libopencm3/cm3/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/cm3/mpu.h
        src/opencm3/libopencm3/include/libopencm3/cm3/nvic.h
        src/opencm3/libopencm3/include/libopencm3/cm3/scb.h
        src/opencm3/libopencm3/include/libopencm3/cm3/scs.h
        src/opencm3/libopencm3/include/libopencm3/cm3/sync.h
        src/opencm3/libopencm3/include/libopencm3/cm3/systick.h
        src/opencm3/libopencm3/include/libopencm3/cm3/tpiu.h
        src/opencm3/libopencm3/include/libopencm3/cm3/vector.h
        src/opencm3/libopencm3/include/libopencm3/dispatch/nvic.h


        src/opencm3/libopencm3/include/libopencm3/stm32/common/adc_common_v1.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/adc_common_v2.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/adc_common_v2_multi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/adc_common_v2_single.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/crc_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/crs_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/crypto_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/dac_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/dma_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/dma_common_l1f013.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/exti_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/flash_common_f01.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/flash_common_f234.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/flash_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/flash_common_l01.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/gpio_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/gpio_common_f234.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/gpio_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/hash_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/hrtim_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/i2c_common_v1.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/i2c_common_v2.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/iwdg_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/pwr_common_v1.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/pwr_common_v2.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/rcc_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/rng_common_v1.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/rtc_common_l1f024.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/spi_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/spi_common_f03.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/spi_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/spi_common_l1f124.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/st_usbfs_common.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/st_usbfs_v1.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/st_usbfs_v2.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/syscfg_common_l1f234.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/timer_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/timer_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/usart_common_all.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/usart_common_f124.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/usart_common_f24.h
        src/opencm3/libopencm3/include/libopencm3/stm32/common/usart_common_v2.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/cec.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/comparator.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/crc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/dac.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/dma.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/doc-stm32f0.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/iwdg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/rtc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/spi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/st_usbfs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/syscfg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/tsc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f0/usart.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/bkp.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/crc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/dac.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/dma.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/doc-stm32f1.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/iwdg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/rtc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/spi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/st_usbfs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f1/usart.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/crc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/crypto.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/dac.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/dma.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/doc-stm32f2.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/hash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/iwdg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/rng.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/rtc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/spi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/syscfg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f2/usart.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/crc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/dac.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/dma.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/doc-stm32f3.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/hrtim.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/iwdg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/rtc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/spi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/st_usbfs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/syscfg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f3/usart.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/crc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/crypto.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/dac.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/dma.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/dma2d.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/doc-stm32f4.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/dsi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/fmc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/hash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/iwdg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/ltdc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/quadspi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/rng.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/rtc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/spi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/syscfg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f4/usart.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/doc-stm32f7.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/f7/rng.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/doc-stm32l0.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/rng.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/st_usbfs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/syscfg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l0/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/crc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/dac.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/dma.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/doc-stm32l1.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/iwdg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/lcd.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/ri.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/rtc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/spi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/st_usbfs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/syscfg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l1/usart.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/doc-stm32l4.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/nvic.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/rng.h
        src/opencm3/libopencm3/include/libopencm3/stm32/l4/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/adc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/can.h
        src/opencm3/libopencm3/include/libopencm3/stm32/cec.h
        src/opencm3/libopencm3/include/libopencm3/stm32/comparator.h
        src/opencm3/libopencm3/include/libopencm3/stm32/crc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/crs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/crypto.h
        src/opencm3/libopencm3/include/libopencm3/stm32/dac.h
        src/opencm3/libopencm3/include/libopencm3/stm32/dbgmcu.h
        src/opencm3/libopencm3/include/libopencm3/stm32/desig.h
        src/opencm3/libopencm3/include/libopencm3/stm32/dma.h
        src/opencm3/libopencm3/include/libopencm3/stm32/dma2d.h
        src/opencm3/libopencm3/include/libopencm3/stm32/dsi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/exti.h
        src/opencm3/libopencm3/include/libopencm3/stm32/flash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/fsmc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/gpio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/hash.h
        src/opencm3/libopencm3/include/libopencm3/stm32/hrtim.h
        src/opencm3/libopencm3/include/libopencm3/stm32/i2c.h
        src/opencm3/libopencm3/include/libopencm3/stm32/iwdg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/ltdc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/stm32/otg_common.h
        src/opencm3/libopencm3/include/libopencm3/stm32/otg_fs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/otg_hs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/pwr.h
        src/opencm3/libopencm3/include/libopencm3/stm32/quadspi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/rcc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/rng.h
        src/opencm3/libopencm3/include/libopencm3/stm32/rtc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/sdio.h
        src/opencm3/libopencm3/include/libopencm3/stm32/spi.h
        src/opencm3/libopencm3/include/libopencm3/stm32/st_usbfs.h
        src/opencm3/libopencm3/include/libopencm3/stm32/syscfg.h
        src/opencm3/libopencm3/include/libopencm3/stm32/timer.h
        src/opencm3/libopencm3/include/libopencm3/stm32/tools.h
        src/opencm3/libopencm3/include/libopencm3/stm32/tsc.h
        src/opencm3/libopencm3/include/libopencm3/stm32/usart.h
        src/opencm3/libopencm3/include/libopencm3/stm32/wwdg.h
        src/opencm3/libopencm3/include/libopencm3/usb/audio.h
        src/opencm3/libopencm3/include/libopencm3/usb/cdc.h
        src/opencm3/libopencm3/include/libopencm3/usb/dfu.h
        src/opencm3/libopencm3/include/libopencm3/usb/doc-usb.h
        src/opencm3/libopencm3/include/libopencm3/usb/hid.h
        src/opencm3/libopencm3/include/libopencm3/usb/midi.h
        src/opencm3/libopencm3/include/libopencm3/usb/msc.h
        src/opencm3/libopencm3/include/libopencm3/usb/usbd.h
        src/opencm3/libopencm3/include/libopencm3/usb/usbstd.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/anadig.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/ccm.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/doc-vf6xx.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/gpio.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/iomuxc.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/memorymap.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/nvic.h
        src/opencm3/libopencm3/include/libopencm3/vf6xx/uart.h

        src/opencm3/libopencm3/include/libopencmsis/stm32/f0/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/f1/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/f2/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/f3/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/f4/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/f7/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/l0/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/l1/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/stm32/l4/irqhandlers.h
        src/opencm3/libopencm3/include/libopencmsis/core_cm3.h
        src/opencm3/libopencm3/lib/cm3/assert.c
        src/opencm3/libopencm3/lib/cm3/dwt.c
        src/opencm3/libopencm3/lib/cm3/nvic.c
        src/opencm3/libopencm3/lib/cm3/scb.c
        src/opencm3/libopencm3/lib/cm3/sync.c
        src/opencm3/libopencm3/lib/cm3/systick.c
        src/opencm3/libopencm3/lib/cm3/vector.c

        src/opencm3/libopencm3/lib/stm32/common/adc_common_v1.c
        src/opencm3/libopencm3/lib/stm32/common/adc_common_v2.c
        src/opencm3/libopencm3/lib/stm32/common/adc_common_v2_multi.c
        src/opencm3/libopencm3/lib/stm32/common/crc_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/crs_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/crypto_common_f24.c
        src/opencm3/libopencm3/lib/stm32/common/dac_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/dma_common_f24.c
        src/opencm3/libopencm3/lib/stm32/common/dma_common_l1f013.c
        src/opencm3/libopencm3/lib/stm32/common/exti_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/flash_common_f01.c
        src/opencm3/libopencm3/lib/stm32/common/flash_common_f234.c
        src/opencm3/libopencm3/lib/stm32/common/flash_common_f24.c
        src/opencm3/libopencm3/lib/stm32/common/flash_common_l01.c
        src/opencm3/libopencm3/lib/stm32/common/gpio_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/gpio_common_f0234.c
        src/opencm3/libopencm3/lib/stm32/common/hash_common_f24.c
        src/opencm3/libopencm3/lib/stm32/common/i2c_common_v1.c
        src/opencm3/libopencm3/lib/stm32/common/i2c_common_v2.c
        src/opencm3/libopencm3/lib/stm32/common/iwdg_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/pwr_common_v1.c
        src/opencm3/libopencm3/lib/stm32/common/pwr_common_v2.c
        src/opencm3/libopencm3/lib/stm32/common/rcc_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/rng_common_v1.c
        src/opencm3/libopencm3/lib/stm32/common/rtc_common_l1f024.c
        src/opencm3/libopencm3/lib/stm32/common/spi_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/spi_common_f03.c
        src/opencm3/libopencm3/lib/stm32/common/spi_common_l1f124.c
        src/opencm3/libopencm3/lib/stm32/common/st_usbfs_core.c
        src/opencm3/libopencm3/lib/stm32/common/st_usbfs_core.h
        src/opencm3/libopencm3/lib/stm32/common/timer_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/timer_common_f0234.c
        src/opencm3/libopencm3/lib/stm32/common/timer_common_f24.c
        src/opencm3/libopencm3/lib/stm32/common/usart_common_all.c
        src/opencm3/libopencm3/lib/stm32/common/usart_common_f124.c
        src/opencm3/libopencm3/lib/stm32/common/usart_common_v2.c
        src/opencm3/libopencm3/lib/stm32/f0/adc.c
        src/opencm3/libopencm3/lib/stm32/f0/comparator.c
        src/opencm3/libopencm3/lib/stm32/f0/crc.c
        src/opencm3/libopencm3/lib/stm32/f0/dac.c
        src/opencm3/libopencm3/lib/stm32/f0/dma.c
        src/opencm3/libopencm3/lib/stm32/f0/flash.c
        src/opencm3/libopencm3/lib/stm32/f0/gpio.c
        src/opencm3/libopencm3/lib/stm32/f0/i2c.c
        src/opencm3/libopencm3/lib/stm32/f0/iwdg.c
        src/opencm3/libopencm3/lib/stm32/f0/pwr.c
        src/opencm3/libopencm3/lib/stm32/f0/rcc.c
        src/opencm3/libopencm3/lib/stm32/f0/rtc.c
        src/opencm3/libopencm3/lib/stm32/f0/spi.c
        src/opencm3/libopencm3/lib/stm32/f0/syscfg.c
        src/opencm3/libopencm3/lib/stm32/f0/timer.c
        src/opencm3/libopencm3/lib/stm32/f0/usart.c
        src/opencm3/libopencm3/lib/stm32/f0/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/f1/adc.c
        src/opencm3/libopencm3/lib/stm32/f1/crc.c
        src/opencm3/libopencm3/lib/stm32/f1/dac.c
        src/opencm3/libopencm3/lib/stm32/f1/dma.c
        src/opencm3/libopencm3/lib/stm32/f1/flash.c
        src/opencm3/libopencm3/lib/stm32/f1/gpio.c
        src/opencm3/libopencm3/lib/stm32/f1/i2c.c
        src/opencm3/libopencm3/lib/stm32/f1/iwdg.c
        src/opencm3/libopencm3/lib/stm32/f1/pwr.c
        src/opencm3/libopencm3/lib/stm32/f1/rcc.c
        src/opencm3/libopencm3/lib/stm32/f1/rtc.c
        src/opencm3/libopencm3/lib/stm32/f1/spi.c
        src/opencm3/libopencm3/lib/stm32/f1/timer.c
        src/opencm3/libopencm3/lib/stm32/f1/usart.c
        src/opencm3/libopencm3/lib/stm32/f1/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/f2/crc.c
        src/opencm3/libopencm3/lib/stm32/f2/crypto.c
        src/opencm3/libopencm3/lib/stm32/f2/dac.c
        src/opencm3/libopencm3/lib/stm32/f2/dma.c
        src/opencm3/libopencm3/lib/stm32/f2/flash.c
        src/opencm3/libopencm3/lib/stm32/f2/gpio.c
        src/opencm3/libopencm3/lib/stm32/f2/hash.c
        src/opencm3/libopencm3/lib/stm32/f2/i2c.c
        src/opencm3/libopencm3/lib/stm32/f2/iwdg.c
        src/opencm3/libopencm3/lib/stm32/f2/pwr.c
        src/opencm3/libopencm3/lib/stm32/f2/rcc.c
        src/opencm3/libopencm3/lib/stm32/f2/rng.c
        src/opencm3/libopencm3/lib/stm32/f2/rtc.c
        src/opencm3/libopencm3/lib/stm32/f2/spi.c
        src/opencm3/libopencm3/lib/stm32/f2/timer.c
        src/opencm3/libopencm3/lib/stm32/f2/usart.c
        src/opencm3/libopencm3/lib/stm32/f2/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/f3/adc.c
        src/opencm3/libopencm3/lib/stm32/f3/crc.c
        src/opencm3/libopencm3/lib/stm32/f3/dac.c
        src/opencm3/libopencm3/lib/stm32/f3/dma.c
        src/opencm3/libopencm3/lib/stm32/f3/flash.c
        src/opencm3/libopencm3/lib/stm32/f3/i2c.c
        src/opencm3/libopencm3/lib/stm32/f3/iwdg.c
        src/opencm3/libopencm3/lib/stm32/f3/pwr.c
        src/opencm3/libopencm3/lib/stm32/f3/rcc.c
        src/opencm3/libopencm3/lib/stm32/f3/rtc.c
        src/opencm3/libopencm3/lib/stm32/f3/spi.c
        src/opencm3/libopencm3/lib/stm32/f3/timer.c
        src/opencm3/libopencm3/lib/stm32/f3/usart.c
        src/opencm3/libopencm3/lib/stm32/f3/vector_chipset.c
        src/opencm3/libopencm3/lib/stm32/f3/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/f4/adc.c
        src/opencm3/libopencm3/lib/stm32/f4/crc.c
        src/opencm3/libopencm3/lib/stm32/f4/crypto.c
        src/opencm3/libopencm3/lib/stm32/f4/dac.c
        src/opencm3/libopencm3/lib/stm32/f4/dma.c
        src/opencm3/libopencm3/lib/stm32/f4/flash.c
        src/opencm3/libopencm3/lib/stm32/f4/fmc.c
        src/opencm3/libopencm3/lib/stm32/f4/gpio.c
        src/opencm3/libopencm3/lib/stm32/f4/hash.c
        src/opencm3/libopencm3/lib/stm32/f4/i2c.c
        src/opencm3/libopencm3/lib/stm32/f4/iwdg.c
        src/opencm3/libopencm3/lib/stm32/f4/ltdc.c
        src/opencm3/libopencm3/lib/stm32/f4/pwr.c
        src/opencm3/libopencm3/lib/stm32/f4/rcc.c
        src/opencm3/libopencm3/lib/stm32/f4/rng.c
        src/opencm3/libopencm3/lib/stm32/f4/rtc.c
        src/opencm3/libopencm3/lib/stm32/f4/spi.c
        src/opencm3/libopencm3/lib/stm32/f4/timer.c
        src/opencm3/libopencm3/lib/stm32/f4/usart.c
        src/opencm3/libopencm3/lib/stm32/f4/vector_chipset.c
        src/opencm3/libopencm3/lib/stm32/f4/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/f7/gpio.c
        src/opencm3/libopencm3/lib/stm32/f7/pwr.c
        src/opencm3/libopencm3/lib/stm32/f7/rcc.c
        src/opencm3/libopencm3/lib/stm32/f7/vector_chipset.c
        src/opencm3/libopencm3/lib/stm32/f7/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/l0/flash.c
        src/opencm3/libopencm3/lib/stm32/l0/gpio.c
        src/opencm3/libopencm3/lib/stm32/l0/i2c.c
        src/opencm3/libopencm3/lib/stm32/l0/rcc.c
        src/opencm3/libopencm3/lib/stm32/l0/rng.c
        src/opencm3/libopencm3/lib/stm32/l0/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/l1/adc.c
        src/opencm3/libopencm3/lib/stm32/l1/crc.c
        src/opencm3/libopencm3/lib/stm32/l1/dac.c
        src/opencm3/libopencm3/lib/stm32/l1/dma.c
        src/opencm3/libopencm3/lib/stm32/l1/flash.c
        src/opencm3/libopencm3/lib/stm32/l1/gpio.c
        src/opencm3/libopencm3/lib/stm32/l1/i2c.c
        src/opencm3/libopencm3/lib/stm32/l1/iwdg.c
        src/opencm3/libopencm3/lib/stm32/l1/lcd.c
        src/opencm3/libopencm3/lib/stm32/l1/rcc.c
        src/opencm3/libopencm3/lib/stm32/l1/rtc.c
        src/opencm3/libopencm3/lib/stm32/l1/spi.c
        src/opencm3/libopencm3/lib/stm32/l1/timer.c
        src/opencm3/libopencm3/lib/stm32/l1/usart.c
        src/opencm3/libopencm3/lib/stm32/l1/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/l4/adc.c
        src/opencm3/libopencm3/lib/stm32/l4/flash.c
        src/opencm3/libopencm3/lib/stm32/l4/i2c.c
        src/opencm3/libopencm3/lib/stm32/l4/pwr.c
        src/opencm3/libopencm3/lib/stm32/l4/rcc.c
        src/opencm3/libopencm3/lib/stm32/l4/vector_chipset.c
        src/opencm3/libopencm3/lib/stm32/l4/vector_nvic.c
        src/opencm3/libopencm3/lib/stm32/can.c
        src/opencm3/libopencm3/lib/stm32/desig.c
        src/opencm3/libopencm3/lib/stm32/st_usbfs_v1.c
        src/opencm3/libopencm3/lib/stm32/st_usbfs_v2.c
        src/opencm3/libopencm3/lib/usb/usb.c
        src/opencm3/libopencm3/lib/usb/usb_control.c
        src/opencm3/libopencm3/lib/usb/usb_efm32lg.c
        src/opencm3/libopencm3/lib/usb/usb_f107.c
        src/opencm3/libopencm3/lib/usb/usb_f207.c
        src/opencm3/libopencm3/lib/usb/usb_fx07_common.c
        src/opencm3/libopencm3/lib/usb/usb_fx07_common.h
        src/opencm3/libopencm3/lib/usb/usb_lm4f.c
        src/opencm3/libopencm3/lib/usb/usb_msc.c
        src/opencm3/libopencm3/lib/usb/usb_private.h
        src/opencm3/libopencm3/lib/usb/usb_standard.c
        src/opencm3/libopencm3/lib/vf6xx/ccm.c
        src/opencm3/libopencm3/lib/vf6xx/gpio.c
        src/opencm3/libopencm3/lib/vf6xx/iomuxc.c
        src/opencm3/libopencm3/lib/vf6xx/uart.c
        src/opencm3/libopencm3/lib/vf6xx/vector_chipset.c
        src/opencm3/libopencm3/lib/vf6xx/vector_nvic.c
        src/opencm3/libopencm3/tests/gadget-zero/delay.c
        src/opencm3/libopencm3/tests/gadget-zero/delay.h
        src/opencm3/libopencm3/tests/gadget-zero/main-stm32f072disco.c
        src/opencm3/libopencm3/tests/gadget-zero/main-stm32f103-generic.c
        src/opencm3/libopencm3/tests/gadget-zero/main-stm32f429i-disco.c
        src/opencm3/libopencm3/tests/gadget-zero/main-stm32f4disco.c
        src/opencm3/libopencm3/tests/gadget-zero/main-stm32l053disco.c
        src/opencm3/libopencm3/tests/gadget-zero/main-stm32l1-generic.c
        src/opencm3/libopencm3/tests/gadget-zero/usb-gadget0.c
        src/opencm3/libopencm3/tests/gadget-zero/usb-gadget0.h
        src/opencm3/libopencm3/tests/shared/trace.c
        src/opencm3/libopencm3/tests/shared/trace.h
        src/opencm3/libopencm3/tests/shared/trace_stdio.c
        src/printf/test/catch.hpp
        src/printf/test/test_suite.cpp
        src/printf/printf.c
        src/printf/printf.h
        src/simulation/detection.h
        src/simulation/move.c
        src/simulation/move.h
        src/buttons.c
        src/buttons.h
        src/config.c
        src/config.h
        src/detection.c
        src/detection.h
        src/eeprom.c
        src/eeprom.h
        src/leds.c
        src/leds.h
        src/main.c
        src/motor.c
        src/motor.h
        src/mylibopencm3.c
        src/mylibopencm3.h
        src/platform.c
        src/platform.h
        src/serial.c
        src/serial.h
        src/setup.c
        src/setup.h
        src/speaker.c
        src/speaker.h
        src/voltage.c
        src/voltage.h)


include_directories(
        src/opencm3/libopencm3/include
        src/
)
add_definitions("-DSTM32F1")